# stm32-usbd

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  memory.x
.cargo/: config
.github/workflows/: ci.yml
ci/: install.sh  script.sh
examples/: cdc_acm.rs  custom.rs  hal.rs  serial.rs  serial_interrupt.rs  serial_rtfm.rs  test_class.rs
examples/cdc_acm/: mod.rs
src/: allocator.rs  atomic_mutex.rs  bus.rs  endpoint.rs  endpoint_buffer.rs  endpoint_memory.rs  endpoint_register.rs  lib.rs  registers.rs  regs.rs  target.rs  usbcore.rs
src/pac/: mod.rs  usb.rs
src/pac/usb/: bcdr.rs  btable.rs  cntr.rs  daddr.rs  epr.rs  fnr.rs  istr.rs  lpmcsr.rs
