[package]
name = "stm32-usbd"
version = "0.4.0"
edition = "2018"
authors = ["Matti Virkkunen <mvirkkunen@gmail.com>", "Vadim Kaushan <admin@disasm.info>", "Nicolas Stalder <n@stalder.io>", "Jonas Martin <lichtfeind@gmail.com>"]
description = "'usb-device' implementation for STM32 microcontrollers"
license = "MIT"
repository = "https://github.com/stm32-rs/stm32-usbd"
readme = "README.md"
keywords = ["no-std", "embedded", "usb"]

[dependencies]
vcell = "0.1.2"
cortex-m = "0.6.1"
usb-device = "0.2.3"

[features]
# USB RAM access scheme
ram_access_1x16 = []
ram_access_2x16 = []

# Known devices
stm32f042xx = ['ram_access_2x16']
stm32f048xx = ['ram_access_2x16']
stm32f072xx = ['ram_access_2x16']
stm32f078xx = ['ram_access_2x16']
stm32f103xx = ['ram_access_1x16']
stm32f303xc = ['ram_access_1x16']
stm32l0x2xx = ['ram_access_2x16']
stm32l4x2xx = ['ram_access_2x16']

[package.metadata.docs.rs]
features = ["stm32f103xx"]
